<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HideSeek</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="hit">Hit</string>
    <string name="tip_title">Leader, a goal there!</string>
    <string name="tip_text">Believe me! Get mushroom to go travel! Now register to check points! </string>
    <string name="action_settings">Settings</string>
    <string name="forget_password">Forget Password?</string>
    <string name="phone">Register Phone</string>
    <string name="send_verification_code">Send Code</string>
    <string name="my_password">My Password </string>
    <string name="re_input_password">Re-input Password</string>
    <string name="to_get_it">Get it</string>
    <string name="destination_distance">Goal Distance</string>
    <string name="me">Me</string>
    <string name="record">Record</string>
    <string name="record_title">Record</string>
    <string name="call_out">Call Out</string>
    <string name="home_title">Home</string>
    <string name="score">Score</string>
    <string name="me_title">Me</string>
    <string name="not_login">Not Login</string>
    <string name="friends">Friends</string>
    <string name="scores">Scores</string>
    <string name="reward_exchange">Reward Exchange</string>
    <string name="settings">Settings</string>
    <string name="my_nickname">My Nickname</string>
    <string name="my_phone">My Phone</string>
    <string name="join">join</string>
    <string name="profile">Profile</string>
    <string name="settings_title">Settings</string>
    <string name="news_notification">News Notification</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="help_and_feedback">Help &amp; Feedback</string>
    <string name="rate_hideseek">Rate HideSeek</string>
    <string name="about">About</string>
    <string name="logout">Log Out</string>
    <string name="my_profile_title">My Profile</string>
    <string name="photo">Photo</string>
    <string name="nickname">Nickname</string>
    <string name="sex">Sex</string>
    <string name="region">Region</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="secret">Secret</string>
    <string name="not_set">Not Set</string>
    <string name="internal">Internal</string>
    <string name="external">External</string>
    <string name="location">Location</string>
    <string name="recent">Recent</string>
    <string name="hot">Hot</string>
    <string name="all">All</string>
    <string name="recent_search_cities">Recent Searched City</string>
    <string name="total_cities">Total Cities</string>
    <string name="hot_cities">Hot Cities</string>
    <string name="go_to_hideseek">Go To Hide&amp;Seek</string>
    <string name="choose">Choose</string>
    <string name="locating">Locating</string>
    <string name="current_city">Current City</string>
    <string name="re_locate">Re-Locate</string>
    <string name="race_group">Race Group</string>
    <string name="match_my_role">Match My Role</string>
    <string name="matching">Matching...</string>
    <string name="grassFairy">Grass Fairy</string>
    <string name="waterMagician">Water Magician</string>
    <string name="fireKnight">Fire Knight</string>
    <string name="stoneMonster">Stone Monster</string>
    <string name="lightningGiant">Lightning Giant</string>
    <string name="role">Role</string>
    <string name="score_title">Score：%s</string>
    <string name="friend_title">Friend</string>
    <string name="splash_introduction">Seeking is a wonderful thing!</string>
    <string name="loading">Loading...</string>
    <string name="refresh_map_hint">Refreshing map...</string>
    <string name="ok">OK</string>
    <string name="not_meet_condition">Not meet hit-monster condition</string>
    <string name="watched_by_monster">You are watched by a %s</string>
    <string name="mushroom">Mushroom</string>
    <string name="bomb">Bomb</string>
    <string name="egg">Egg</string>
    <string name="cow">Cow</string>
    <string name="bird">Bird</string>
    <string name="giraffe">Giraffe</string>
    <string name="dragon">Dragon</string>
    <string name="danger_warning_title">Warning</string>
    <string name="get_it">Get It</string>
    <string name="share_title">Enter into the age of Tribes</string>
    <string name="share_message">My God! A monster is watching at me, please help me!</string>
    <string name="add_friend_title">Add Friend</string>
    <string name="profile_title">Profile</string>
    <string name="name">Name: %s</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="set_remark">Set Remark</string>
    <string name="tribe">Tribe</string>
    <string name="add">Add</string>
    <string name="photograph">photo</string>
    <string name="friend_verification_title">Friend Verification</string>
    <string name="request_message">Request Message</string>
    <string name="send">Send</string>
    <string name="feedback">FeedBack</string>
    <string name="contacts">Contacts</string>
    <string name="phone_or_email">Phone Or Email</string>
    <string name="submit">Submit</string>
    <string name="advice">Advice</string>
    <string name="consultation">Consultation</string>
    <string name="complaints">Complaints</string>
    <string name="submit_success">Submit Success!</string>
    <string name="use_guide">Use Guide</string>
    <string name="clear_finish">Clear Finish!</string>
    <string name="clear_dialog_content">Are you sure you clear the local cache?</string>
    <string name="browser">Browser</string>
    <string name="monster_guide">Monster Guide</string>
    <string name="win_score">Win Score: </string>
    <string name="battle_role">Battle Role: </string>
    <string name="accept">Accept</string>
    <string name="added">Added</string>
    <string name="new_friends">New Friends</string>
    <string name="new_friends_title">New Friends</string>
    <string name="friend_accept_message">%s accept your friend request</string>
    <string name="friend_request_message">You got a friend request</string>
    <string name="self_introduction">I am %s</string>
    <string name="none">None</string>
    <string name="league_race">%d race is enough</string>
    <string name="league_races">League of %d races</string>
    <string name="exchange">Exchange</string>
    <string name="purchase">Purchase</string>
    <string name="amount_title">Amount: %.2f yuan</string>
    <string name="exchange_amount_title">Amount: %d score</string>
    <string name="transaction_complete">Transaction Complete</string>store_title
    <string name="not_pay">Not Pay</string>
    <string name="click_to_pay">Click To Pay</string>
    <string name="purchase_area">Purchase Area</string>
    <string name="exchange_area">Exchange Area</string>
    <string name="my_order_title">My Orders</string>
    <string name="store_title">Store</string>
    <string name="success_purchase">Purchase the product successfully</string>

    <string name="error_goal_invalid">The goal has disappeared or beyond your range</string>
    <string name="error_phone_empty">Please input your phone</string>
    <string name="error_password_empty">Please input the password</string>
    <string name="error_login_failed">Phone or password error</string>
    <string name="error_password_not_same">Two passwords are not the same</string>
    <string name="error_connect_network_failed">Failed to connect the network</string>
    <string name="error_response_format">The format of response is wrong</string>
    <string name="error_location_failed">Failed to locate</string>
    <string name="error_goal_disappear">The Goal has disappeared</string>
    <string name="error_session_invalid">You are kicked out by others</string>
    <string name="error_user_already_exist">The phone is already registered</string>
    <string name="error_password_short">The password is too short</string>
    <string name="error_password_long">The length of password cannot be greater than 45</string>
    <string name="error_verification_code">The input verification code is wrong</string>
    <string name="error_search_myself">Cannot add yourself as friend</string>
    <string name="error_guide_not_see_monster">You can only use the monster guide when you see the monster</string>

    <string name="warning_not_enabled">You don\'t have the right to beat the monster</string>

    <string name="message_not_login">You haven\'t logged in. Go to login?</string>
    <string name="message_input_city">Input city name to search</string>
    <string name="message_no_city_found">Sorry, no city was found</string>
    <string name="message_get_mushroom">Throw a mushroom monster into sack easily, Rich bitch!</string>
    <string name="message_get_egg">So excited! Beat an egg monster successfully!</string>
    <string name="message_get_cow">You are watched by a cow monster，how smart I am to beat it in time!</string>
    <string name="message_get_bird">Dodged a bullet! Coming across a bird monster scared me!</string>
    <string name="message_get_giraffe">Thanks to friends,lucky to get a giraffe monster!</string>
    <string name="message_get_dragon">It is a great satisfaction to get a dragon monster, so cool!</string>
    <string name="message_get_bomb">Unfortunately detonated a crafty bomb monster, Give me a break!</string>
    <string name="message_input_friend">Input friend name to search</string>
    <string name="message_phone_or_nickname">Phone or nickname</string>
    <string name="message_no_friend_found">Sorry, no friend was found</string>
    <string name="message_has_guide">You already have a monster guide. Continue to buy?</string>

    <string name="add_one_score">+1</string>
    <string name="minus_one_score">-1</string>
    <string name="buy_too_more">rich,you buy more!</string>
    <string name="hello_world">Hello world!</string>

    <!--使用指南的url-->
    <string name="use_guide_url">"http://mp.weixin.qq.com/s?__biz=MzIzNzQ4MTU1NQ==&amp;mid=100000001&amp;idx=1&amp;sn=5545a634716ca5fce962759fe5fb18c0&amp;chksm=68c6ba3d5fb1332b6e0fb3080c6d94da4af57940068ef9ae2b579a88fd8f90c59e357e7ece1d&amp;scene=18#wechat_redirect"</string>
</resources>
