<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f1f0f0">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/yellow_ffcc00">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/settings_title"/>
    </LinearLayout>
    <!--清除缓存-->
    <LinearLayout
        android:id="@+id/clearCacheLayout"
        style="@style/CrossBarLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/clear_cache"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/cacheSizeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginRight="20dp"
            android:textColor="@color/gray_8e8d8b"/>
    </LinearLayout>
    <!--反馈-->
    <LinearLayout
        android:id="@+id/feedbackLayout"
        style="@style/CrossBarLayout"
        android:layout_marginTop="12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/feedback"
            android:textColor="@color/black"/>
    </LinearLayout>
    <!--评价-->
    <LinearLayout
        android:id="@+id/rateLayout"
        style="@style/CrossBarLayout"
        android:layout_marginTop="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/rate_hideseek"
            android:textColor="@color/black"/>
    </LinearLayout>
    <!--使用指南-->
    <LinearLayout
        android:id="@+id/useGuideLayout"
        style="@style/CrossBarLayout"
        android:layout_marginTop="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/use_guide"
            android:textColor="@color/black"/>
    </LinearLayout>
    <!--关于-->
    <LinearLayout
        android:id="@+id/aboutLayout"
        style="@style/CrossBarLayout"
        android:layout_marginTop="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/about"
            android:textColor="@color/black"/>
    </LinearLayout>
    <!--退出登陆-->
    <LinearLayout
        android:id="@+id/logoutLayout"
        style="@style/CrossBarLayout"
        android:layout_marginTop="12dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>