<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/gray_f1f0f0">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:background="@color/yellow_ffcc00">
        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/back_icon"/>

        <TextView
            android:id="@+id/backTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/backImageView"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/settings"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="16sp"
            android:text="@string/feedback"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        <Button
            android:id="@+id/adviceButton"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:text="@string/advice"
            android:textSize="12sp"
            android:background="@drawable/feedback_type_back_press"
            />
        <Button
            android:id="@+id/consultationButton"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/consultation"
            android:textSize="12sp"
            android:background="@drawable/feedback_type_back"/>
        <Button
            android:id="@+id/complaintsButton"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:text="@string/complaints"
            android:textSize="12sp"
            android:background="@drawable/feedback_type_back"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="65dp"
            android:layout_marginBottom="30dp"
            android:text="@string/submit"
            android:textSize="12sp"
            android:background="@drawable/introduce_btn_back"
            android:enabled="false"/>
        <LinearLayout
            android:id="@+id/contactsLayout"
            style="@style/CrossBarLayout"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_above="@id/submitButton">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/contactsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:lines="1"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:hint="@string/phone_or_email"/>
        </LinearLayout>

        <EditText
            android:id="@+id/contentEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="left|top"
            android:layout_above="@id/contactsLayout"
            android:padding="10dp"/>
    </RelativeLayout>
</LinearLayout>