<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/gray_f1f0f0">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:background="@color/yellow_ffcc00">
        <TextView
            android:id="@+id/cancelTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/cancel"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="16sp"
            android:text="@string/sex"/>

        <TextView
            android:id="@+id/submitTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/save"
            android:enabled="false"/>
    </RelativeLayout>

    <LinearLayout
        style="@style/CrossBarLayout"
        android:layout_marginTop="12dp">
        <EditText
            android:id="@+id/nicknameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:background="@null"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:lines="1"
            android:hint="@string/nickname"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>