<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/closeBtn"
            android:layout_width="16sp"
            android:layout_height="16sp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/close_back"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true">

            <LinearLayout
                style="@style/AccountLayout"
                android:layout_marginTop="70dp">
                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="24dp"
                    android:src="@drawable/phone_icon"/>

                <EditText
                    android:id="@+id/accountEditText"
                    style="@style/LoginEditText"
                    android:hint="@string/my_phone"/>
            </LinearLayout>

            <LinearLayout
                style="@style/AccountLayout">
                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="24dp"
                    android:src="@drawable/password_icon"/>

                <EditText
                    android:id="@+id/passwordEditText"
                    style="@style/LoginEditText"
                    android:hint="@string/my_password"
                    android:password="true"/>
            </LinearLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/introduce_btn_back"
                android:text="@string/login"
                android:layout_marginTop="27dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:enabled="false"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="8dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/registerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/register"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="@android:color/black"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/forget_password"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <View android:layout_width="0dp"
                android:layout_height="0dp"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>